[lab 3] - celery + redis worker parser (#5)
* lab 3

* lint fixes

* add docs
